[gd_scene load_steps=7 format=3 uid="uid://dms1s540842ck"]

[ext_resource type="Script" uid="uid://cdk1p6mu0rqda" path="res://hud.gd" id="1_tre1x"]
[ext_resource type="FontFile" uid="uid://b80ln02ca1un4" path="res://fonts/Xolonium-Regular.ttf" id="1_yk2h0"]

[sub_resource type="InputEventAction" id="InputEventAction_vjtsr"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_f3j22"]
events = [SubResource("InputEventAction_vjtsr")]

[sub_resource type="InputEventAction" id="InputEventAction_64ctp"]
action = &"pause_game"

[sub_resource type="Shortcut" id="Shortcut_8sq4i"]
events = [SubResource("InputEventAction_64ctp")]

[node name="HUD" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_tre1x")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_yk2h0")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 160.0
offset_right = 205.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_yk2h0")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShieldLabel" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -208.0
offset_right = -163.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.109804, 0.458824, 0.737255, 1)
theme_override_fonts/font = ExtResource("1_yk2h0")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CoinLabel" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -16.0
offset_top = 78.0
offset_right = 18.0
offset_bottom = 108.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_yk2h0")
theme_override_font_sizes/font_size = 24
text = "$"
horizontal_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -120.0
offset_right = 240.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_yk2h0")
theme_override_font_sizes/font_size = 64
text = "Dodge the Baddies!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -140.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_yk2h0")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_f3j22")
text = "Start"

[node name="PauseButton" type="Button" parent="."]
visible = false
offset_left = 8.0
offset_top = 8.0
offset_right = 121.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("1_yk2h0")
theme_override_font_sizes/font_size = 32
shortcut = SubResource("Shortcut_8sq4i")
text = "Pause"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ShieldUpgrade" type="Button" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -152.0
offset_top = 128.0
offset_right = 155.0
offset_bottom = 175.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_yk2h0")
theme_override_font_sizes/font_size = 32
text = "Add Shields | $15
"

[node name="ProjectileUpgrade" type="Button" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -184.0
offset_top = 200.0
offset_right = 176.0
offset_bottom = 247.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_yk2h0")
theme_override_font_sizes/font_size = 32
text = "Add Projectiles | $20"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="ShieldUpgrade" to="." method="_on_shield_upgrade_pressed"]
[connection signal="pressed" from="ProjectileUpgrade" to="." method="_on_projectile_upgrade_pressed"]
